--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-	"name": "apiserver",
-	"description": "A ready to go modular http API Server.",
-	"main" : "./lib/apiserver.js",
-	"version": "0.1.3",
-	"repository": {
-		"type": "git",
-		"url": "http://github.com/kilianc/node-apiserver.git"
-	},
-	"dependencies": {
-		"bufferjoiner": "0.1.0"
-	},
-	"author": [
-		"Kilian Ciuffolo <me@nailik.org> (http://nailik.org)"
-	]
+  "author": "Kilian Ciuffolo <me@nailik.org> (http://nailik.org)",
+  "name": "apiserver",
+  "description": "A ready to go, modular, JSON(P) API Server.",
+  "keywords": ["api", "server", "rest", "json", "jsonp"],
+  "version": "0.2.0",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/kilianc/node-apiserver.git"
+  },
+  "main" : "./",
+  "scripts": {
+    "test": "make test"
+  },
+  "engines": {
+    "node": ">= v0.6.x"
+  },
+  "dependencies": {
+    "json-transport": "0.1.x",
+    "apiserver-router": "0.1.x",
+    "buffered-request": "0.1.x",
+    "fnchain": "0.1.1",
+    "bufferjoiner": "0.1.x",
+    "formidable": "1.0.x",
+    "qs": "0.4.x",
+    "mime": "1.2.x"
+  },
+  "devDependencies": {
+    "mocha": "1.0.x",
+    "should": "0.6.1",
+    "request": "2.9.x"
+  }
 }
