--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "node": ">= v0.6.x"
   },
   "dependencies": {
-    "json-transport": "0.1.x",
     "apiserver-router": "0.2.x",
+    "bufferjoiner": "^0.1.3",
     "fnchain": "0.1.1",
-    "bufferjoiner": "0.1.x",
-    "formidable": "1.0.x",
-    "qs": "0.4.x",
-    "mime": "1.2.x"
+    "formidable": "^1.0.15",
+    "json-transport": "0.1.x",
+    "mime": "^1.2.11",
+    "qs": "^0.4.2"
   },
   "devDependencies": {
     "mocha": "1.0.x",
